// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationVersionedLambda renders a lambda with a node v14 runtime 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.js.zip",
        "source": [
          {
            "content": "exports.handler = (event, context) => { console.log(event) }",
            "filename": "index.js"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "nodejs14.x",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with description 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with environment variables 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "environment": {
          "variables": {
            "MY": "env_var",
            "for": "test"
          }
        },
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with execution policy statements 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          },
          {
            "actions": [
              "*"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with log retention 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 10
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with publish ignored 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash",
            "publish"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with s3 bucket 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with tags 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14,
        "tags": {
          "for": "test",
          "my": "tag"
        }
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}",
        "tags": {
          "for": "test",
          "my": "tag"
        }
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole",
        "tags": {
          "for": "test",
          "my": "tag"
        }
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "tags": {
          "for": "test",
          "my": "tag"
        },
        "timeout": 5
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true,
        "tags": {
          "for": "test",
          "my": "tag"
        }
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with timeout 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 500
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;

exports[`ApplicationVersionedLambda renders a versioned lambda with vpc 1`] = `
"{
  "data": {
    "archive_file": {
      "test-versioned-lambda_lambda-default-file_E2490368": {
        "output_path": "index.py.zip",
        "source": [
          {
            "content": "import json\\ndef handler(event, context):\\n\\t print(event)\\n\\t return {'statusCode': 200, 'headers': {'dance': 'party'}, 'body': json.dumps({'electric': 'boogaloo'}), 'isBase64Encoded': False}",
            "filename": "index.py"
          }
        ],
        "type": "zip"
      }
    },
    "aws_iam_policy_document": {
      "test-versioned-lambda_assume-policy-document_54E2E6E3": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com",
                  "edgelambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ],
        "version": "2012-10-17"
      },
      "test-versioned-lambda_execution-policy-document_BA37CD4D": {
        "statement": [
          {
            "actions": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
              "logs:DescribeLogStreams"
            ],
            "effect": "Allow",
            "resources": [
              "arn:aws:logs:*:*:*"
            ]
          },
          {
            "actions": [
              "ec2:DescribeNetworkInterfaces",
              "ec2:CreateNetworkInterface",
              "ec2:DeleteNetworkInterface",
              "ec2:DescribeInstances",
              "ec2:AttachNetworkInterface"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ],
        "version": "2012-10-17"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "test-versioned-lambda_log-group_CB8A67E7": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "name": "/aws/lambda/\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "retention_in_days": 14
      }
    },
    "aws_iam_policy": {
      "test-versioned-lambda_execution-policy_A934214F": {
        "name": "Test-Lambda-ExecutionRolePolicy",
        "policy": "\${data.aws_iam_policy_document.test-versioned-lambda_execution-policy-document_BA37CD4D.json}"
      }
    },
    "aws_iam_role": {
      "test-versioned-lambda_execution-role_068103E3": {
        "assume_role_policy": "\${data.aws_iam_policy_document.test-versioned-lambda_assume-policy-document_54E2E6E3.json}",
        "name": "Test-Lambda-ExecutionRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "test-versioned-lambda_execution-role-policy-attachment_30E5BCA4": {
        "depends_on": [
          "aws_iam_role.test-versioned-lambda_execution-role_068103E3",
          "aws_iam_policy.test-versioned-lambda_execution-policy_A934214F"
        ],
        "policy_arn": "\${aws_iam_policy.test-versioned-lambda_execution-policy_A934214F.arn}",
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.name}"
      }
    },
    "aws_lambda_alias": {
      "test-versioned-lambda_alias_60AF9CE1": {
        "depends_on": [
          "aws_lambda_function.test-versioned-lambda_D818669D"
        ],
        "function_name": "\${aws_lambda_function.test-versioned-lambda_D818669D.function_name}",
        "function_version": "\${element(split(\\":\\", aws_lambda_function.test-versioned-lambda_D818669D.qualified_arn), 7)}",
        "lifecycle": {
          "ignore_changes": [
            "function_version"
          ]
        },
        "name": "DEPLOYED"
      }
    },
    "aws_lambda_function": {
      "test-versioned-lambda_D818669D": {
        "filename": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_path}",
        "function_name": "Test-Lambda-Function",
        "handler": "index.handler",
        "lifecycle": {
          "ignore_changes": [
            "filename",
            "source_code_hash"
          ]
        },
        "memory_size": 128,
        "publish": true,
        "reserved_concurrent_executions": -1,
        "role": "\${aws_iam_role.test-versioned-lambda_execution-role_068103E3.arn}",
        "runtime": "python3.8",
        "source_code_hash": "\${data.archive_file.test-versioned-lambda_lambda-default-file_E2490368.output_base64sha256}",
        "timeout": 5,
        "vpc_config": {
          "security_group_ids": [
            "sec1",
            "sec2"
          ],
          "subnet_ids": [
            "1",
            "2"
          ]
        }
      }
    },
    "aws_s3_bucket": {
      "test-versioned-lambda_code-bucket_C658EE92": {
        "acl": "private",
        "bucket": "test-bucket",
        "force_destroy": true
      }
    },
    "aws_s3_bucket_public_access_block": {
      "test-versioned-lambda_code-bucket-public-access-block_9662548B": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.test-versioned-lambda_code-bucket_C658EE92.id}"
      }
    }
  }
}"
`;
